added button to create test data for all

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -14,6 +14,8 @@
 					<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
 					<br/><br/>
 					<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
+					<br/><br/>
+					<a class="btn btn-primary" role="button" th:href="@{/administration/createTestDataForAll}" th:text="#{administration.createTestDataForAll}"></a>
 				</div>
 			</div>
 			<hr/>
