--- a/src/main/resources/templates/info/standings.html
+++ b/src/main/resources/templates/info/standings.html
@@ -42,6 +42,44 @@
 					</div>
 				</div>				
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="table-responsive">
+						<table class="table small table-bordered">
+							<tbody>
+								<tr>
+									<td class="active center">MP</td>
+									<td>Matches Played</td>
+								</tr>
+								<tr>
+									<td class="active center">W</td>
+									<td>Winner</td>
+								</tr>
+								<tr>
+									<td class="active center">D</td>
+									<td>draw</td>
+								</tr>
+								<tr>
+									<td class="active center">L</td>
+									<td>Looser</td>
+								</tr>
+								<tr>
+									<td class="active center">G</td>
+									<td>Goals</td>
+								</tr>
+								<tr>
+									<td class="active center">Diff</td>
+									<td>Goal Difference</td>
+								</tr>
+								<tr>
+									<td class="active center">Pts</td>
+									<td>Points</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
