added files for showing chart

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -108,6 +108,7 @@
 								<li th:class="${pageState_standings}"><a href="#standings" th:href="@{/standings}" th:text="#{standings.title}"></a></li>
 								<li th:class="${pageState_info_statistic}"><a href="#misc" th:href="@{/info/statistic}" th:text="#{statistics.title}"></a></li>
 								<li th:class="${pageState_info_pointsfrequency}"><a href="#misc" th:href="@{/info/pointsfrequency}" th:text="#{pointsfrequency.title}"></a></li>
+								<li th:class="${pageState_pointcourse_show}"><a href="#misc" th:href="@{/pointcourse/show}" th:text="#{pointcourse.title}"></a></li>
 								<li class="divider" role="separator"></li>
 					        	<li th:class="${pageState_info_rules}"><a href="#rules" th:href="@{/info/rules}" th:text="#{rules.title}"></a></li>
 					        	<li th:class="${pageState_info_prices}"><a href="#prices" th:href="@{/info/prices}" th:text="#{prices.title}"></a></li>
