--- a/src/main/resources/templates/info/pointcourse.html
+++ b/src/main/resources/templates/info/pointcourse.html
@@ -9,39 +9,37 @@
 <body>
 <div layout:fragment="content">
     <h1 th:text="#{pointcourse.title}"></h1>
-    <div class="row">
-        <div class="col-12">
-            <canvas id="myChart"></canvas>
-            <script th:inline="javascript">
-                var ctx = $('#myChart');
-                var barChartData = /*[[${barChartData}]]*/ 'default';
-                var myChart = new Chart(ctx, {
-                    type: 'bar',
-                    data: barChartData,
-                    options: {
-                        legend: {
-                            position: 'bottom'
-                        },
-                        scales: {
-                            xAxes: [{
-                                stacked: true,
-                            }],
-                            yAxes: [{
-                                stacked: true,
-                                ticks: {
-                                    beginAtZero: true
-                                }
-                            }]
-                        },
-                        plugins: {
-                            colorschemes: {
-                                scheme: 'brewer.Paired7'
+    <div class="chart-container" style="height: 100px">
+        <canvas id="myChart"></canvas>
+        <script th:inline="javascript">
+            var ctx = $('#myChart');
+            var barChartData = /*[[${barChartData}]]*/ 'default';
+            var myChart = new Chart(ctx, {
+                type: 'bar',
+                data: barChartData,
+                options: {
+                    legend: {
+                        position: 'bottom'
+                    },
+                    scales: {
+                        xAxes: [{
+                            stacked: true,
+                        }],
+                        yAxes: [{
+                            stacked: true,
+                            ticks: {
+                                beginAtZero: true
                             }
+                        }]
+                    },
+                    plugins: {
+                        colorschemes: {
+                            scheme: 'brewer.Paired7'
                         }
                     }
-                });
-            </script>
-        </div>
+                }
+            });
+        </script>
     </div>
 </div>
 </body>
