update line chart

--- a/src/main/resources/templates/info/pointcourse.html
+++ b/src/main/resources/templates/info/pointcourse.html
@@ -15,22 +15,11 @@
             var ctx = $('#myChart');
             var barChartData = /*[[${barChartData}]]*/ 'default';
             var myChart = new Chart(ctx, {
-                type: 'bar',
+                type: 'line',
                 data: barChartData,
                 options: {
                     legend: {
                         position: 'bottom'
-                    },
-                    scales: {
-                        xAxes: [{
-                            stacked: true,
-                        }],
-                        yAxes: [{
-                            stacked: true,
-                            ticks: {
-                                beginAtZero: true
-                            }
-                        }]
                     },
                     plugins: {
                         colorschemes: {
