--- a/src/main/resources/templates/info/points_freq.html
+++ b/src/main/resources/templates/info/points_freq.html
@@ -8,7 +8,7 @@
 		<div layout:fragment="content" class="container">
 			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<h1 th:text="#{pointsfrequency.title}"></h1>
-			<span class="label label-info" th:text="#{pointsfrequency.title2}"></span>
+			<span th:text="#{pointsfrequency.title2}"></span>
 			<br/>
 			<br/>
 			<div class="row" th:if="${pointsFrequencyCommand != null}">
