--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -7,9 +7,9 @@
 <body>
 	<div layout:fragment="content">
 		<div th:replace="~{fragments/alert :: alert_headline}"></div>
-		
-		<h1 th:if="${not #lists.isEmpty(matchesToBet)}" th:text="#{bet.listOpen.title}"></h1>
-		<div class="row">
+
+		<h1 th:text="#{bet.listOpen.title}"></h1>
+		<div th:if="${not #lists.isEmpty(matchesToBet)}" class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="form-group">
 					<a href="#" th:href="@{'/bet/dice'}" class="btn btn-info" role="button">
