--- a/src/main/resources/templates/info/pointcourse.html
+++ b/src/main/resources/templates/info/pointcourse.html
@@ -3,8 +3,6 @@
       layout:decorate="~{_layout}">
 <head>
     <title th:text="#{pointcourse.title}"></title>
-    <script type="text/javascript" th:src="@{/js/Chart.bundle.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/chartjs-plugin-colorschemes.min.js}"></script>
 </head>
 <body>
 <div layout:fragment="content">
@@ -16,28 +14,32 @@
         </div>
         <div th:if="${chartData}" class="col-12" style="height: 430px;">
             <canvas id="myChart"></canvas>
-            <script th:inline="javascript">
-                var ctx = $('#myChart');
-                var chartData = /*[[${chartData}]]*/ 'default';
-                var myChart = new Chart(ctx, {
-                    type: 'line',
-                    data: chartData,
-                    options: {
-                        responsive: true,
-                        legend: {
-                            position: 'bottom'
-                        },
-                        plugins: {
-                            colorschemes: {
-                                scheme: 'brewer.Paired7'
-                            }
-                        },
-                        maintainAspectRatio: false
-                    }
-                });
-            </script>
         </div>
     </div>
 </div>
+<th:block layout:fragment="scripts">
+    <script type="text/javascript" th:src="@{/js/Chart.bundle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/chartjs-plugin-colorschemes.min.js}"></script>
+    <script th:inline="javascript">
+        var ctx = $('#myChart');
+        var chartData = /*[[${chartData}]]*/ 'default';
+        var myChart = new Chart(ctx, {
+            type: 'line',
+            data: chartData,
+            options: {
+                responsive: true,
+                legend: {
+                    position: 'bottom'
+                },
+                plugins: {
+                    colorschemes: {
+                        scheme: 'brewer.Paired7'
+                    }
+                },
+                maintainAspectRatio: false
+            }
+        });
+    </script>
+</th:block>
 </body>
 </html>
