--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -16,17 +16,17 @@
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
-
-		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
-        <script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>
-        <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
-        <script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
-		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
 	</head>
 	<body>
 		<nav th:replace="~{_navigation :: menu}"></nav>
 		<div class="container" role="main">		
 			<div layout:fragment="content" class="container" role="main">Content Placeholder</div>
 		</div>
+		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
+		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
+		<th:block layout:fragment="scripts"></th:block>
 	</body>
 </html>
