--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -100,9 +100,11 @@
 				</div>
 			</div>
 		</form>
-		<script type="text/javascript" th:src="@{/js/pages/bet_and_result.js}" charset="UTF-8"></script>
-		<script type="text/javascript" th:src="@{/js/pages/random_dice.js}" charset="UTF-8"></script>
-		<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
 	</div>
 </body>
+<th:block layout:fragment="scripts">
+	<script type="text/javascript" th:src="@{/js/pages/bet_and_result.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/pages/random_dice.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
+</th:block>
 </html>
