--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -4,7 +4,6 @@
 <head>
 	<title th:text="#{matches.form.title}"></title>
 	<link rel="stylesheet" th:href="@{/css/bootstrap-datetimepicker.min.css}" media="screen"/>
-	<script type="text/javascript" th:src="@{/js/pages/edit_match.js}" charset="UTF-8"></script>
 </head>
 <body>
 	<div layout:fragment="content" class="container">		
@@ -76,11 +75,14 @@
 					</div>
 				</div>
 			</div>
-			<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
-			<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.de.js}" charset="UTF-8"></script>
-			<script type="text/javascript" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>
-			<script type="text/javascript" th:src="@{/js/pages/confirmation.js}" charset="UTF-8"></script>
 		</form>
 	</div>	
 </body>
+<th:block layout:fragment="scripts">
+	<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.de.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/pages/confirmation.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/pages/edit_match.js}" charset="UTF-8"></script>
+</th:block>
 </html>
