--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="row">
 						<input id="croppedFileBase64" type="hidden" name="croppedFileBase64" value="" />
-						<img id="resultImage" src="" class="img-rounded"></img>
+						<img id="resultImage" src="" class="img-rounded"/>
 					</div>
 					<br/>
 					<div class="row">
@@ -46,9 +46,11 @@
 					</div>
 				</form>				
 			</div>
-			<script type="text/javascript" th:src="@{/js/croppie.min.js}" charset="UTF-8"></script>
-			<script type="text/javascript" th:src="@{/js/exif.js}" charset="UTF-8"></script>
-			<script type="text/javascript" th:src="@{/js/pages/crop_image.js}" charset="UTF-8"></script>
 		</div>
 	</body>
+	<th:block layout:fragment="scripts">
+		<script type="text/javascript" th:src="@{/js/croppie.min.js}" charset="UTF-8"></script>
+		<script type="text/javascript" th:src="@{/js/exif.js}" charset="UTF-8"></script>
+		<script type="text/javascript" th:src="@{/js/pages/crop_image.js}" charset="UTF-8"></script>
+	</th:block>
 </html>
