--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -45,7 +45,9 @@
 					</div>
 				</div>
 			</form>
-			<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
 		</div>
 	</body>
+	<th:block layout:fragment="scripts">
+		<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
+	</th:block>
 </html>
