--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -47,8 +47,10 @@
 				</div>
 			</div>
 		</form>
-		<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
-		<script type="text/javascript" th:src="@{/js/pages/confirmation.js}" charset="UTF-8"></script>
 	</div>
 </body>
+<th:block layout:fragment="scripts">
+	<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
+	<script type="text/javascript" th:src="@{/js/pages/confirmation.js}" charset="UTF-8"></script>
+</th:block>
 </html>
