--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -34,12 +34,12 @@
 								<div class="col-xs-2 center">
 									<div class="short-div goal_padding">
 										<a th:if="${!matchCommand.isBettable()}" th:href="@{'/bet/others/match/' + ${matchCommand.matchId} + '?redirectViewName=' + ${redirectViewName}}">
-											<span class="fas fa-thumbs-up fa-2x" th:title="#{matches.list.betted}"></span>
+											<span class="fas fa-thumbs-up fa-2x" th:title="#{matches.list.betted}" data-toggle="tooltip" data-placement="top"></span>
 										</a>
-										<span th:if="${matchCommand.isBettable()}" class="fas fa-thumbs-up fa-2x" th:title="#{matches.list.betted}"></span>
+										<span th:if="${matchCommand.isBettable()}" class="fas fa-thumbs-up fa-2x" th:title="#{matches.list.betted}" data-toggle="tooltip" data-placement="top"></span>
 									</div>
 									<div class="short-div goal_padding">
-										<span class="fas fa-trophy fa-2x" th:title="#{matches.list.result}"></span>
+										<span class="fas fa-trophy fa-2x" th:title="#{matches.list.result}" data-toggle="tooltip" data-placement="bottom"></span>
 									</div>							  									  		
 					  			</div>					
 					  			<div class="col-xs-4 goal-badges center">				
