update to bootstrap 3.4.1

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/fontawesome.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/brands.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/solid.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />		
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap-theme.min.css}" />		
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}" />
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
@@ -24,7 +24,7 @@
 		</div>
 		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>
-		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
 		<th:block layout:fragment="scripts"></th:block>
