--- a/src/main/resources/templates/info/standings.html
+++ b/src/main/resources/templates/info/standings.html
@@ -40,41 +40,40 @@
 							</tbody>
 						</table>
 					</div>
-				</div>				
-			</div>
-			<div class="row">
+				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
+					<h2 th:text="#{standings.legend}"></h2>
 					<div class="table-responsive">
 						<table class="table small table-bordered">
 							<tbody>
-								<tr>
-									<td class="active center">MP</td>
-									<td>Matches Played</td>
-								</tr>
-								<tr>
-									<td class="active center">W</td>
-									<td>Winner</td>
-								</tr>
-								<tr>
-									<td class="active center">D</td>
-									<td>draw</td>
-								</tr>
-								<tr>
-									<td class="active center">L</td>
-									<td>Looser</td>
-								</tr>
-								<tr>
-									<td class="active center">G</td>
-									<td>Goals</td>
-								</tr>
-								<tr>
-									<td class="active center">Diff</td>
-									<td>Goal Difference</td>
-								</tr>
-								<tr>
-									<td class="active center">Pts</td>
-									<td>Points</td>
-								</tr>
+							<tr>
+								<td class="active center">MP</td>
+								<td th:text="#{standings.matchesPlayed}"></td>
+							</tr>
+							<tr>
+								<td class="active center">W</td>
+								<td th:text="#{standings.winner}"></td>
+							</tr>
+							<tr>
+								<td class="active center">D</td>
+								<td th:text="#{standings.draw}"></td>
+							</tr>
+							<tr>
+								<td class="active center">L</td>
+								<td th:text="#{standings.looser}"></td>
+							</tr>
+							<tr>
+								<td class="active center">G</td>
+								<td th:text="#{standings.goals}"></td>
+							</tr>
+							<tr>
+								<td class="active center">Diff</td>
+								<td th:text="#{standings.goalDifference}"></td>
+							</tr>
+							<tr>
+								<td class="active center">Pts</td>
+								<td th:text="#{standings.points}"></td>
+							</tr>
 							</tbody>
 						</table>
 					</div>
