--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -182,7 +182,7 @@
 								<li th:class="${pageState_cropping_show}">
 									<a th:href="@{/cropping/show}" th:text="#{navigation.profileImage}"></a>
 								</li>
-								<li th:if="${@runtimeConfigurationUtil.getConfig().isEnableChangingUsername()}" th:class="${pageState_profile_changeUsername}">
+								<li th:if="${@runtimeSettingsUtil.getSettings().isEnableChangingUsername()}" th:class="${pageState_profile_changeUsername}">
 									<a href="#changeUsername" th:href="@{/profile/changeUsername}" th:text="#{navigation.changeUsername}"></a>
 								</li>
 							</ul>						
