--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -33,7 +33,7 @@
 							</ul>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
 						</div>						
-						<div th:if="${@runtimeConfigurationUtil.getConfig().isEnabledParentChildRanking()}" class="form-group">									
+						<div th:if="${@runtimeSettingsUtil.getSettings().isEnabledParentChildRanking()}" class="form-group">
 							<input id="child" type="checkbox" th:field="*{child}" th:value="${child}"/>
 							<label for="child" th:text="#{user.create.child}"></label>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child Error</p>
