--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -23,7 +23,7 @@
 						<div class="form-group">
 							<label th:text="#{image.upload.file}"></label><br/>
 					    	<input id="upload" type="file" accept="image/jpeg"/>
-							<script type="text/javascript" th:src="@{/js/index.js}"></script>
+							<script type="text/javascript" th:src="@{/js/compress.js}"></script>
 							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
 							<img id="preview" width="320"/>
 							<script type="text/javascript">
