--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -26,26 +26,15 @@
 							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
 							<img id="preview" width="320"/>
 						</div>
+<!--						<div class="form-group">-->
+<!--							<label th:text="#{image.upload.rotate}"></label><br/>-->
+<!--							<button id="rotateRight" type="button" class="crop-image-rotate btn" data-deg="90">-->
+<!--								<i class="fas fa-redo" aria-hidden="true"></i>-->
+<!--							</button>-->
+<!--						</div>-->
 						<div class="form-group">
 							<label th:text="#{image.upload.description}"></label><br/>
 							<input type="text" th:field="*{description}" class="form-control" />
-						</div>
-						<div class="form-group">
-							<label th:text="#{image.upload.rotate}"></label><br/>
-							<div class="row center">
-								<div class="col-xs-4">
-									<i class="fas fa-user" aria-hidden="true"></i>
-									<input type="radio" th:field="*{rotation}" value="NONE"/>
-								</div>
-								<div class="col-xs-4">
-									<i class="fas fa-undo" aria-hidden="true"></i>
-									<input type="radio" th:field="*{rotation}" value="LEFT"/>
-								</div>
-								<div class="col-xs-4">
-									<i class="fas fa-redo" aria-hidden="true"></i>
-									<input type="radio" th:field="*{rotation}" value="RIGHT"/>
-								</div>								
-							</div>		
 						</div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
@@ -89,6 +78,7 @@
 			</div>
 		</div>
 		<th:block layout:fragment="scripts">
+			<script type="text/javascript" th:src="@{/js/jquery-rotate.js}"></script>
 			<script type="text/javascript" th:src="@{/js/compress.js}" charset="UTF-8"></script>
 			<script type="text/javascript" th:src="@{/js/pages/image_upload.js}" charset="UTF-8"></script>
 		</th:block>
