--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -28,10 +28,10 @@
 						</div>
 						<div class="form-group">
 							<label th:text="#{image.upload.rotate}"></label><br/>
-							<button id="rotateLeft" type="button" class="crop-image-rotate btn" data-deg="-90">
+							<button type="button" class="rotate-image-btn btn" data-deg="-90">
 								<i class="fas fa-undo" aria-hidden="true"></i>
 							</button>
-							<button id="rotateRight" type="button" class="crop-image-rotate btn" data-deg="90">
+							<button type="button" class="rotate-image-btn btn" data-deg="90">
 								<i class="fas fa-redo" aria-hidden="true"></i>
 							</button>
 						</div>
