using image responsive

--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -24,7 +24,7 @@
 							<label th:text="#{image.upload.file}"></label><br/>
 					    	<input id="upload" type="file" accept="image/jpeg"/>
 							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
-							<img id="preview" width="100%"/>
+							<img id="preview" class="img-responsive"/>
 						</div>
 						<div class="form-group">
 							<label th:text="#{image.upload.rotate}"></label><br/>
